<resources>
    <string name="app_name">KotlinLayoutApplication</string>
    <string name="name_flash">Name Flash</string>
    <string name="toast_using_stringresource">Toast using StringResource</string>
    <string name="hint">hint</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="fullname">FirstName: %s, Last Name: %s</string>
    <string name="second_image_activity">Second Image Activity</string>
    <string name="monster_images_container">Monster Images Container</string>
    <string name="monster_3">Monster 3</string>
    <string name="monster_2">Monster 2</string>
    <string name="monster_1">Monster 1</string>
</resources>
